# ics-py

./: .bumpversion.cfg  .coveragerc  .deepsource.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  changes.md  codecov.yml  data  example.py  fixture.py  grammar  grammar.ebnf  ics_parser.py  meta.py  mypy.ini  parser.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test  test.py  tox.ini  utils.py
.github/workflows/: build-and-publish.yml  publish-to-pypi.yml  pythonpackage.yml
dev/: install-hooks  make_cache  post-checkout  prepare-commit-msg  release-workflow.rst  requirements-doc.txt  requirements-test.txt  test  travis-install
doc/: LICENSE.rst  Makefile  about.rst  advanced.rst  api.rst  conf.py  event-cmp.md  event-cmp.rst  event.md  event.rst  examples.rst  index.rst  installation.rst  introduction.rst  misc.rst  requirements.txt  timezone.rst
doc/_templates/: sidebar.html  sidebarlogo.html
doc/_themes/: flask_theme_support.py
doc/explanation/: custom-properties.rst  event.rst  howto.rst  icalender-format.rst  limitations.rst  misc.rst  timezone.rst
doc/howtos/: installation.rst  quickstart.rst
doc/reference/: api.rst  changelog.rst
doc/tutorials/: create-ics-with-cal-prog.rst
ics/: __init__.py  __meta__.py  alarm.py  attendee.py  calendar.py  component.py  contentline.ebnf  event.py  eventlist.py  icalendar.py  organizer.py  parse.py  parser.py  property.py  repeatable.py  timeline.py  timespan.py  todo.py  tools.py  types.py  utils.py
ics/alarm/: __init__.py  audio.py  base.py  custom.py  display.py  email.py  none.py  utils.py
ics/converter/: base.py  component.py  special.py  timespan.py  value.py
ics/grammar/: __init__.py  contentline.ebnf  contentline.py  parse.py
ics/parsers/: alarm.py  alarm_parser.py  attendee_parser.py  event.py  event_parser.py  icalendar.py  icalendar_parser.py  parser.py  todo.py  todo_parser.py
ics/serializers/: alarm.py  alarm_serializer.py  attendee_serializer.py  event.py  event_serializer.py  icalendar.py  icalendar_serializer.py  serializer.py  todo.py  todo_serializer.py
ics/tests/: fixture.py  test.py
ics/valuetype/: base.py  datetime.py  generic.py  special.py
logo/: ics.ai
misc/: bulk_import.py
src/ics/: __init__.py  alarm.py  attendee.py  component.py  event.py  geo.py  icalendar.py  rrule.py  timeline.py  timespan.py  timezone.py  todo.py  types.py  utils.py
src/ics/contentline/: __init__.py  common.py  container.py  grammar.ebnf  grammar.py  handwritten.py  parser.py  perftest.py  regex_parser.py  tatsu_parser.py
src/ics/converter/: __init__.py  base.py  calendar.py  component.py  context.py  special.py  timespan.py  timezone.py  timezone_utils.py  value.py
src/ics/converter/types/: calendar.py  timespan.py  timezone.py  various.py
src/ics/grammar/: __init__.py  contentline.ebnf
src/ics/timezone/: __init__.py  converters.py
src/ics/valuetype/: __init__.py  base.py  datetime.py  generic.py  special.py  text.py
src/ics_vtimezones/: .gitignore  __init__.py  get_zoneinfo.sh
tests/: __init__.py  alarm.py  calendar.py  component.py  contentline.py  duration.py  event.py  eventlist.py  fixture.py  misc.py  normalization.py  parse.py  property.py  samples.py  test.py  test_calendar.py  test_ics.py  timeline.py  timespan.py  todo.py  unfold_lines.py  utils.py
tests/contentline/: __init__.py  examples.py
tests/contentline/tatsu/: __init__.py  grammar.ebnf  grammar.py
tests/fixtures/: README  Romeo-and-Juliet.ics  Romeo-and-Juliet.txt  spaces.ics  utf-8-emoji.ics
tests/gehol/: BA1.ics  BA2.ics  BA3.ics  MA1.ics  MA2.ics
tests/grammar/: __init__.py
tests/issues/: gh181_188.py  gh182.py  gh195.py  gh210.py  gh251.py  gh268.py  gh269.py  gh68.py
tests/samples/: README  bulk_import.py  mozilla_holidays.py
tests/samples/ical4j/: LICENSE.txt
tests/samples/icalendar_py/: LICENSE.rst  america_new_york.ics  pacific_fiji.ics  time.ics  timezone_rdate.ics  timezone_same_start_and_offset.ics
tests/samples/libical/: 0.ics  1-1.ics  1.ics  2445.ics  LICENSE.txt  caltime.ics  crash.ics  get_char_test.ics  issue250.ics  issue251.ics  issue252.ics  issue253.ics  issue339.ics  malloc.ics  process-calendar.ics  process-incoming.ics  restriction.ics  smallcluster.ics  zday.ics
tests/samples/unicode/: LICENSE.txt
tests/samples/wikisource/: LICENSE.txt
tests/valuetype/: text.py
