[tool.poetry]
name = "ics"
version = "0.8.0-dev"
description = "Pythonic iCalendar (RFC 5545) Parser"
authors = ["Nikita Marchant <nikita.marchant@gmail.com>", "Niko Fink <icspy@niko.fink.bayern>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://pypi.org/project/ics/"
repository = "https://github.com/ics-py/ics-py"
documentation = "https://icspy.readthedocs.io/en/stable/"
keywords = ["ics", "icalendar", "calendar", "event", "rfc5545"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Topic :: Office/Business :: Scheduling',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]

[tool.poetry.dependencies]
python =                     "^3.7"
python-dateutil =            "^2.8"
attrs =                      ">=20.3"
ics-vtimezones =             ">=2020.1"

# extra: test
pytest =                     { version = "^6.2",       optional = true }
pytest-cov =                 { version = "^2.8.1",     optional = true }
hypothesis =                 { version = "^5.8.0",     optional = true }
tatsu =                      { version = ">4.2",       optional = true }
importlib_resources =        { version = ">=1.4",      optional = true }
lipsum =                     { version = "^0.1.2",     optional = true }

# extra: dev
bump2version =               { version = "^1.0.0",     optional = true }
tox =                        { version = "^3.15.0",    optional = true }

# extra: docs
sphinx =                     { version =  "<3",        optional = true }

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "hypothesis", "tatsu", "importlib_resources", "lipsum"]
dev = ["bump2version", "tox"]
docs = ["sphinx"]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
