[project]
name = "ics"
version = "0.8.0-dev0"
description = "Pythonic iCalendar (RFC 5545) Parser"
authors = [
    { name = "Nikita Marchant", email = "nikita.marchant@gmail.com" },
    { name = "Niko Fink", email = "icspy@niko.fink.bayern" },
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://pypi.org/project/ics/"
repository = "https://github.com/ics-py/ics-py"
documentation = "https://icspy.readthedocs.io/en/stable/"
keywords = ["ics", "icalendar", "calendar", "event", "rfc5545"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Topic :: Office/Business :: Scheduling',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]
requires-python = ">=3.7"
dependencies = [
    "python-dateutil >= 2.8",
    "attrs >= 20.3",
    "ics-vtimezones >= 2020.1",
]

[project.optional-dependencies]
test = [
    "pytest >= 7",
    "pytest-cov >= 3",
    "hypothesis >= 6",
    "tatsu > 4.2",
    "importlib_resources >= 1.4",
    "lipsum >= 0.1.2",
    "freezegun >= 1.2.1",
]
dev = [
    "bump2version >= 1.0.0",
    "tox >= 3.25",
]
docs = [
    "sphinx >= 5",
    "sphinx-autodoc-typehints",
]
checks = [
    "flake8>=3.8.1",
    "mypy==0.960",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
