[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ics"
version = "0.8.0.dev0"
description = "Pythonic iCalendar (RFC 5545) Parser"
authors = [
    { name = "Nikita Marchant", email = "nikita.marchant@gmail.com" },
    { name = "Niko Fink", email = "icspy@niko.fink.bayern" },
]
license = "Apache-2.0"
readme = "README.rst"
keywords = ["ics", "icalendar", "calendar", "event", "rfc5545"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Office/Business :: Scheduling',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Typing :: Typed',
]
requires-python = ">=3.8"
dependencies = [
    "python-dateutil >= 2.8",
    "attrs >= 20.3",
    "ics-vtimezones >= 2020.1",
]

[project.optional-dependencies]
test = [
    "pytest >= 7",
    "pytest-cov >= 3",
    "hypothesis >= 6",
    "tatsu > 4.2",
    "importlib_resources >= 1.4",
    "lipsum >= 0.1.2",
    "freezegun >= 1.2.1",
]
dev = [
    "bump2version >= 1.0.0",
    "tox >= 3.25",
]
docs = [
    "sphinx >= 5",
    "sphinx-autodoc-typehints",
]
checks = [
    "flake8>=3.8.1",
    "mypy==0.960",
]

[project.urls]
Homepage = "https://pypi.org/project/ics/"
Repository = "https://github.com/ics-py/ics-py"
Documentation = "https://icspy.readthedocs.io/en/stable/"

[tool.isort]
profile = "black"
