[pytest]
python_files = *.py
flakes-ignore =
    UnusedImport
    UndefinedName
pep8ignore =
    tests/*.py ALL
    doc/_themes/flask_theme_support.py ALL
    E501
    E128
    F403
    F401
    E261
    E265
    W503


[flake8]
ignore=E128,E261,E265,E501,F403,F401,W503
exclude=doc/,ve/,ve3/

[metadata]
license-file = LICENSE

[check-manifest]
ignore =
    .travis.yml
    doc/*
    doc
    requirements*.txt
    test
    dev/*
    dev
    .coveragerc

[wheel]
universal = 1
